# stock

./: Dockerfile  compose.yml  pyproject.toml  requirements.txt  setup.py  test.py
app/: __init__.py  real_time.py
stock/: __init__.py  real_time.py
